started fixing overflow issues

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -125,6 +125,7 @@ container route {
 #profile-links-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 
     margin-top: 1rem;
 
@@ -134,12 +135,12 @@ container route {
 }
 
 #profile-links-container > a {
-    /* set border-color to be interesting */
     border-style: solid;
     border-color: #4b494d;
     border-width: .2rem;
     border-radius: 1.2rem;
     padding: .5rem;
+    margin-top: 1rem;
     margin-right: 1rem;
 }
 
